--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
