--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "apexcharts": "^4.1.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.6.0",
     "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
